Bug 126012 - FOURIER function returns the same values as the input for 1x2 input data though Polar flag is TRUE
Summary: FOURIER function returns the same values as the input for 1x2 input data thou...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.beta1+
Hardware: All macOS (All)
: medium normal
Assignee: Dennis Francis
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-19 17:20 UTC by So
Modified: 2019-06-30 23:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description So 2019-06-19 17:20:32 UTC
Description:
FOURIER function returns the same results as the input data if the size of input is 1x2. It is appropriate for the case Polar=FALSE. But the result should be changed into polar form if the fourth argument Polar is TRUE.

Steps to Reproduce:
1.Open s spreadsheet.
2.Input 0 to A1, 1 to B1, and select A2.
3.Open function wizard and choose FOURIER function.
4.Input A1:B1, 1, 0, 1, 0 to the argument forms, press OK.

Actual Results:
0, 1 are displayed at A2, B2.

Expected Results:
1, 1.5707963267949 should displayed at A2, B2. They are the absolute value and the argument of the result 0+i.



Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: StartModule
[Information guessed from browser]
OS: Mac OS X (All)
OS is 64bit: no
Comment 1 Julien Nabet 2019-06-19 20:09:05 UTC
Dennis: one for you since it concerns Fourier part?
Comment 2 Dennis Francis 2019-06-20 06:31:26 UTC
Confirmed. Thanks for the bug report !
Comment 3 Commit Notification 2019-06-20 11:19:09 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e324a6cea23fe19ec8a67f368c31e1567928a5af%5E%21

tdf#126012: Take care of polar and min-magnitude flags...

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Dennis Francis 2019-06-21 17:37:58 UTC
Fixed in master. Pending approval for 6.3 @ https://gerrit.libreoffice.org/#/c/74441/
Comment 5 Commit Notification 2019-06-30 23:58:00 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/08c39a9d96dafcb6f04b0b73e82603dfb49acc21%5E%21

tdf#126012: Take care of polar and min-magnitude flags...

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.