tdf#126012: Take care of polar and min-magnitude flags...

even in one point case. Add relevant test cases too.

Change-Id: I647ac14ff8e9ee11664b23b37d150f51e6a08354